# frak

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  arg.c  arg.h  args.c  args.h  ci.sh  frak_args.c  frak_args.h  main.c  tiff.c  tiff.h
frakl/: CMakeLists.txt  args.c  args.h  fractal.c  fractal.h  queue.c  queue.h  time_utils.c  time_utils.h  utils.h  wq.c  wq.h
tests/: CMakeLists.txt  args.c  driver.c  queue.c  tests.c  tests.h  tests_tests.c  utils.c  wq.c
